--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for XML::XSS
 
 {{$NEXT}}
+    * fix the failing tests because of overloading.
 
 0.1_1     2010-07-12 21:23:22 America/Montreal
     * add a Changes file.
