--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for XML::XSS
 
 {{$NEXT}}
+    * add $master to stylesheet classes.
+    * add 'style' keyword.
 
 0.1.3     2010-07-29 20:43:30 America/Montreal
     * add a first pass of template/overloading documentation 
