--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for XML::XSS
 
 {{$NEXT}}
+    * deal with CDATASection (as a text node)
 
 0.2_0     2010-12-20 18:32:38 America/Montreal
     * add $master to stylesheet classes.
