B clashes with core's B

--- a/Changes
+++ b/Changes
@@ -1,9 +1,9 @@
 Revision history for XML::XSS
 
 {{$NEXT}}
-    * templates deal with metacharacters correctly
-
     * fixes to work with Moose 1.99+, as well as older versions. (Dave Rolsky)
+    * templates deal with metacharacters correctly
+    * test module B renamed Beta not to clash with core's B.
 
 0.3.0     2010-12-25 22:31:17 America/Montreal
     * deal with CDATASection (as a text node)
