--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for XML::XSS
 
 {{$NEXT}}
+    [BUG FIXES]
+    * Fix precedence bug with return statement. (RT#87196, Reini Urban)
 
 0.3.1     2011-03-14 20:02:18 America/Montreal
     * fixes to work with Moose 1.99+, as well as older versions. (Dave Rolsky)
