--- a/Changes
+++ b/Changes
@@ -11,11 +11,15 @@ Revision history for XML::XSS
 
  [NEW FEATURES]
 
+ [STATISTICS]
+
+0.3.3 2013-09-19
  [MISC]
- * Use the native traits instead of Moose::AttributeHelpers.
-    (RT#88824, raised by Karen Etheridge)
+ - Use the native traits instead of Moose::AttributeHelpers. (RT#88824,
+   raised by Karen Etheridge)
 
  [STATISTICS]
+ - code churn: 3 files changed, 51 insertions(+), 32 deletions(-)
 
 0.3.2 2013-07-27
  [BUG FIXES]
